[package]
name = "rust-sonicpi-expts"
version = "0.1.0"
authors = ["Dave Challis <dave@suicas.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
rosc = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.7"
